--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   flutter_offline: ^3.0.1
   flutter_staggered_animations: ^1.1.1
   page_transition: ^2.1.0
+  image_picker_web: ^3.1.1
+  image_picker: ^1.0.7
+  file_picker: ^6.2.0
 
 
 dev_dependencies:
