--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,9 @@ dependencies:
   flutter_offline: ^3.0.1
   flutter_staggered_animations: ^1.1.1
   page_transition: ^2.1.0
-  image_picker_web: ^3.1.1
-  image_picker: ^1.0.7
   file_picker: ^6.2.0
+  dotted_border:
+  syncfusion_flutter_pdfviewer: ^20.2.44-beta
 
 
 dev_dependencies:
@@ -87,8 +87,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
