--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   file_picker: ^6.2.0
   dotted_border:
   syncfusion_flutter_pdfviewer: ^20.2.44-beta
+  lottie: ^3.0.0
 
 
 dev_dependencies:
